--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/marked": "^4.0.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "isomorphic-dompurify": "^0.24.0",
+    "marked": "^4.2.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
